feat(jedis-compatibility): address PR feedback and ensure Java 8 compatibility
Signed-off-by: prashanna-frsh <prashanna.rajendran@freshworks.com>